--- a/.github/workflows/build-test-run.yml
+++ b/.github/workflows/build-test-run.yml
@@ -12,7 +12,38 @@ jobs:
     container: darrylwest/ubuntu24-gpp1420:latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Install system dependencies
+      run: |
+        apt-get update
+        apt-get install -y \
+          cmake \
+          ninja-build \
+          git
+        
+        # Verify installation
+        gcc --version
+        g++ --version
+        cmake --version
+
+    - name: Install Catch2
+      run: |
+        git clone https://github.com/catchorg/Catch2.git
+        cd Catch2
+        git checkout v3.7.1
+        cmake -B build -S . -DBUILD_TESTING=OFF -DCMAKE_INSTALL_PREFIX=/usr/local
+        cmake --build build --parallel $(nproc)
+        cmake --build build --target install
+        cd ..
+
+    - name: Configure CMake
+      run: |
+        cmake -B build \
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+          -DCMAKE_CXX_STANDARD=23 \
+          -G Ninja
 
     - name: Show Versions
       run: |
@@ -20,15 +51,16 @@ jobs:
         g++ --version
         cmake --version
 
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build
-
     - name: Build
-      run: cmake --build ${{github.workspace}}/build
+      run: |
+        cmake --build build --parallel $(nproc)
 
-    - name: Test
-      working-directory: ${{github.workspace}}/build
-      run: ctest
+    - name: Run tests
+      run: |
+        cd build
+        ctest --output-on-failure --parallel $(nproc)
 
     - name: Run
-      run: ${{github.workspace}}/build/tiny-app
+      run: |
+        echo "=== Running simple-colors example ==="
+        ${{github.workspace}}/build/tiny-app
