fixed all target; refactored cmake to pull and build deps (more portable); updated workflow

--- a/.github/workflows/build-test-run.yml
+++ b/.github/workflows/build-test-run.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     container: darrylwest/ubuntu24-gpp1420:latest
 
+    strategy:
+      matrix:
+        build_type: [Debug, Release]
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -27,16 +31,6 @@ jobs:
         gcc --version
         g++ --version
         cmake --version
-
-    - name: Install Catch2
-      run: |
-        git clone https://github.com/catchorg/Catch2.git
-        cd Catch2
-        git checkout v3.7.1
-        cmake -B build -S . -DBUILD_TESTING=OFF -DCMAKE_INSTALL_PREFIX=/usr/local
-        cmake --build build --parallel $(nproc)
-        cmake --build build --target install
-        cd ..
 
     - name: Configure CMake
       run: |
@@ -62,5 +56,5 @@ jobs:
 
     - name: Run
       run: |
-        echo "=== Running simple-colors example ==="
+        echo "=== Running tiny-app ==="
         ${{github.workspace}}/build/tiny-app
