--- a/.github/workflows/build-test-run.yml
+++ b/.github/workflows/build-test-run.yml
@@ -62,8 +62,8 @@ jobs:
 
     - name: Run tests
       run: |
-        cd build
-        ctest --output-on-failure --parallel $(nproc)
+        echo "=== Running unit tests ==="
+        ${{github.workspace}}/build/unit_tests
 
     - name: Run
       run: |
